# Marcella-70M-SLM

./: .gitignore  LICENSE  README.md  ToBeWorkedOn.md  api.py  download.py  pyproject.toml  test.ipynb  train_tokenizer.py
models/: Marcella_vocab_32K.model  Marcella_vocab_32K.vocab  marcella.pt  marcella_finetuned.pt
src/: attention.py  marcella.py  tokenizer.py  transformer.py
training/: checkpoint.py  config.py  dataloader.py  finetune.py  finetuning_dataloader.py  train.py
ui/: vite.config.js
ui/src/: App.svelte
