[project]
name = "smalllanguagemodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.4.2",
    "fastapi>=0.135.2",
    "python-dotenv>=1.2.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.42.0",
    "wandb>=0.25.1",
]
